# Kyrsovoi_project

./: .dockerignore  .env  .env-docker  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
bot/: __init__.py  bot_config.py  main.py
bot/db/: postgres.py
bot/keyboards/: keyboard_button.py  keyboard_for_choose_test.py  keyboard_for_start.py
bot/routers/: start_router.py
bot/states/: states.py
config/: __init__.py  app_config.py
docker/: app.sh  tg.sh
migrations/: env.py
src/: main.py  postgres.py
src/api/: handlers.py  models.py
src/db/models/: base.py
